[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/UI/PNG/Accept/Information.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/PNG/Accept/Window.png" type="Texture" id=2]
[ext_resource path="res://script/InformationLevel.gd" type="Script" id=3]
[ext_resource path="res://assets/UI/PNG/Buttons/BTNs/Play_BTN.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/PNG/Buttons/BTNs/Close_BTN.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "transitionMovie"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="InformationLevel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Panel" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -621.5
margin_top = -358.0
margin_right = 541.5
margin_bottom = 550.0
rect_scale = Vector2( 1.085, 0.77 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -303.0
margin_top = -309.5
margin_right = 303.0
margin_bottom = -250.5
rect_scale = Vector2( 1.085, 0.77 )
texture = ExtResource( 1 )

[node name="Container" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = 172.0
margin_right = 407.0
margin_bottom = 388.0
rect_scale = Vector2( 0.6, 0.6 )
custom_constants/separation = 130

[node name="Accept" type="Button" parent="Container"]
pause_mode = 2
margin_right = 222.0
margin_bottom = 216.0
icon = ExtResource( 4 )
flat = true

[node name="Cancel" type="Button" parent="Container"]
pause_mode = 2
margin_left = 352.0
margin_right = 574.0
margin_bottom = 216.0
icon = ExtResource( 8 )
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/transitionMovie = SubResource( 2 )

[node name="TimerTransitionGame" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Container/Accept" to="." method="_on_Accept_pressed"]
[connection signal="pressed" from="Container/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="timeout" from="TimerTransitionGame" to="." method="_on_TimerTransitionGame_timeout"]
